<resources>
    <string name="app_name">手信</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="tip">提示</string>
    <string name="iknow">我知道了</string>
    <string name="save">保存</string>
    <string name="quit_msg">退出手信后是否在后台接收消息？</string>
    <string name="quit_ok">接收</string>
    <string name="quit_cancel">不接收</string>
    <string name="logout_dialog_msg">你确定要注销帐号 %1$s吗？</string>
    <string name="logout_fail">注销失败，请检查网络</string>
    <string name="logout_success">注销成功</string>
    <string name="ticketout">帐号已在别处登录，请检查帐号安全或重新登录</string>
    <string name="send_sms_again">重发</string>
    <string name="network_error">联网失败，请检查网络</string>
    <string name="network_timeout">网络超时，请重试</string>
    <string name="no_sdcard_mount">确保SD卡存在并且没有处于挂载状态</string>
    <string name="update_now">更新</string>
    <string name="update_later">暂不更新</string>
    <string name="retry">重试</string>
    <string name="bound">绑定</string>
    <string name="rebound">换绑</string>
    <string name="apk_download_success">新版本已经下载成功，是否立即安装？</string>
    <string name="install_now">安装</string>
    <string name="install_later">暂不安装</string>
    <string name="download_now">系统正在更新......</string>
    <string name="download_error">更新失败，请重试！</string>
    <string name="download_now_toast">亲,不要再点了,偶正在给力下载中......</string>
    <string name="net_error">网络异常！</string>
    <string name="sdcard_full">T卡已满，请检查T卡！</string>
    <string name="shortcut">是否需要创建桌面快捷方式？</string>
    <string name="invite">邀请</string>
    <string name="notifi_content">条未读消息</string>
    <string name="notifi_content_fastchat">条未读传声筒消息</string>
    <string name="notifiy_down_file">正在下载手信</string>
    <string name="download_progress">正在下载手信</string>
    <string name="download_success">手信下载成功</string>
    <string name="download_failed">手信下载失败</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_findfriend">找朋友</string>
    <string name="main_tab_settings">设置</string>
    <string name="message_new">新建消息</string>
    <string name="message_list_title">消息</string>
    <string name="net_unconnect">联网失败，请检查当前网络状况！</string>
    <string name="net_status">联网失败，请检查当前网络状况！</string>
    <string name="net_reconnect">连接中，请稍候&#8230;</string>
    <string name="message_list_dialog_content">删除选中的消息会同时删除本地短信收件箱中对应的短信记录，是否确认删除？</string>
    <string name="message_list_btn_confirm">删除</string>
    <string name="message_list_btn_cancel">取消</string>
    <string name="message_list_dialog_wait">正在删除，请稍候</string>
    <string name="message_list_card_item">[名片]</string>
    <string name="message_list_voice_item">[语音]</string>
    <string name="message_list_picture_item">[图片]</string>
    <string name="message_list_frd_item">[推荐好友]</string>
    <string name="message_list_sync_sms">正在关联短信</string>
    <string name="message_list_sync_wait">正在初始化会话列表，请稍等！</string>
    <string name="message_list_sync_contacts">正在关联通讯录</string>
    <string name="message_list_delete">删除</string>
    <string name="message_list_selectall">全选</string>
    <string name="message_list_selectnone">全不选</string>
    <string name="message_list_send_notice">请至少选择一个收件人！</string>
    <string name="message_list_nomessage">暂无消息记录</string>
    <string name="message_multi_delete_title">批量删除消息</string>
    <string name="contacts_detail_title">详细资料</string>
    <string name="contacts_detail_call">拨号</string>
    <string name="contacts_detail_send_message">发消息</string>
    <string name="contacts_detail_invite">邀请开通手信</string>
    <string name="contacts_detail_send_card">给TA发名片</string>
    <string name="contacts_detail_delete">删除</string>
    <string name="contacts_detail_blacklist">加黑名单</string>
    <string name="contacts_detail_signature_title">签名</string>
    <string name="contacts_detail_name">姓名</string>
    <string name="contacts_detail_phone">电话</string>
    <string name="contacts_detail_note">备注</string>
    <string name="contacts_detail_birthday">生日</string>
    <string name="contacts_detail_hometown">地区</string>
    <string name="contacts_detail_school">学校</string>
    <string name="contacts_detail_corporation">单位</string>
    <string name="contacts_detail_shouxin_number">帐号</string>
    <string name="contacts_detail_shouxin_account">帐号  :  %1$s</string>
    <string name="contacts_detail_status_online">在线</string>
    <string name="contacts_detail_not_shouxin">未开通手信</string>
    <string name="contacts_detail_delete_tip">是否确认删除此联系人？</string>
    <string name="contacts_detail_blacklist_tip">是否确认将此联系人加入黑名单？</string>
    <string name="contacts_detail_blacklist_remove_tip">是否确认将此联系人解除黑名单？</string>
    <string name="contacts_detail_invite_content">我在用手信给你发短信，非常方便，还能语音对讲！赶紧装一个！软件地址：http://s.mopo.com/d.do？n=</string>
    <string name="contacts_detail_edit_necessary">必填</string>
    <string name="contacts_detail_edit_addphone">添加电话</string>
    <string name="contacts_detail_edit_need_phone">联系人需要提供电话号码！</string>
    <string name="contacts_detail_edit_save">保存</string>
    <string name="contacts_detail_edit_need_phone_and_name">联系人需要提供姓名和电话号码！</string>
    <string name="contacts_list_del_tip">删除该联系人</string>
    <string name="contacts_list_del_waiting">正在删除联系人，请稍等！</string>
    <string name="contacts_detail_loading">正在载入联系人信息，请稍等！</string>
    <string name="inform_menu">举报TA</string>
    <string name="inform_dialog_title">请选择举报类型：</string>
    <string name="inform_harass">骚扰信息</string>
    <string name="inform_sexy">色情信息</string>
    <string name="inform_spam">垃圾广告</string>
    <string name="inform_wronginfo">资料不当</string>
    <string name="inform_thanks">感谢您的举报，我们会在核实信息后进行处理。</string>
    <string name="inform_failed">举报失败，请重试</string>
    <string name="contacts_list_search_hint">搜索联系人</string>
    <string name="contacts_list_title">联系人</string>
    <string name="contacts_list_number_tip">您共有 %1$s 个联系人</string>
    <string name="contacts_list_zore">您未添加联系人</string>
    <string name="contacts_list_delete_confirm">删除该联系人会同时删除手机通讯录中对应的联系人，是否确认删除？</string>
    <string name="contacts_list_btn_confirm">删除</string>
    <string name="contacts_list_btn_cancel">取消</string>
    <string name="contacts_list_del_sucess">删除成功！</string>
    <string name="contacts_list_del_failed">删除失败！</string>
    <string name="contacts_list_blacklist_waitting">正在加入黑名单！</string>
    <string name="contacts_list_blacklist_remove_waitting">正在解除黑名单！</string>
    <string name="contacts_list_blacklist_sucess">加入黑名单成功！</string>
    <string name="contacts_list_blacklist_failed">加入黑名单失败！</string>
    <string name="contacts_list_blacklist_unblack_sucess">解除黑名单成功！</string>
    <string name="contacts_list_blacklist_unblack_failed">解除黑名单失败！</string>
    <string name="contacts_list_new_sucess">已成功将%1$s保存为联系人！</string>
    <string name="contacts_list_online">您的好友%1$s已上线！</string>
    <string name="contacts_list_offline">您的好友%1$s已下线！</string>
    <string name="contacts_list_sub_item_number"> %1$s (在线)</string>
    <string name="contacts_list_is_exist">该联系人已经存在</string>
    <string name="contacts_list_sync_failed">联系人同步失败</string>
    <string name="contacts_list_all">全部联系人</string>
    <string name="contacts_list_allonline">在线联系人</string>
    <string name="contacts_list_newcontact">新增联系人</string>
    <string name="contacts_detail_edit_title">编辑资料</string>
    <string name="contacts_detail_edit_menu">编辑资料</string>
    <string name="contacts_detail_saving">正在保存请稍候！</string>
    <string name="contacts_detail_edit_title_new">新增联系人</string>
    <string name="contacts_detail_edit_no_input">请输入姓名和电话</string>
    <string name="contacts_multi_del_title">批量删除联系人</string>
    <string name="contacts_search_ok_btn_text">确定(%1$s)</string>
    <string name="contacts_multi_del_btn_text">删除(%1$s)</string>
    <string name="contacts_multi_del_local_confirm">删除选中的联系人会同时删除手机通讯录中对应的联系人，是否确认删除？</string>
    <string name="contacts_multi_del_confirm">确认要删除选中的联系人？</string>
    <string name="contacts_multi_del_notice">请至少选择一个联系人！</string>
    <string name="contacts_black_list_failed">操作失败</string>
    <string name="contacts_black_list_remove">解除黑名单</string>
    <string name="contacts_black_list_delete">从该组删除</string>
    <string name="contacts_black_list_clear">确定清空黑名单列表？</string>
    <string name="contacts_black_list_clear_waiting">正在清空黑名单</string>
    <string name="contacts_black_list_clear_menu">清空</string>
    <string name="contacts_black_list_firstadd_tip">您将不再接收到该联系人向你发送的网络消息，此功能无法屏蔽通过运营商发送的短信</string>
    <string name="findfriend_title">找朋友</string>
    <string name="search_friend_title">查找联系人</string>
    <string name="friend_know">可能认识的人</string>
    <string name="friend_later_more">查看附近的人</string>
    <string name="friend_list_syncing">手信小助手正在为您寻找可能认识的人，请稍候！</string>
    <string name="findfriend_later_more">亲爱的手信用户，更多好用、好玩的找朋友功能将在后续推出，敬请期待哦！</string>
    <string name="friend_detail_send_message">打招呼</string>
    <string name="friend_add_contact">加为联系人</string>
    <string name="friend_reason">推荐理由:</string>
    <string name="friend_detail_syncing">正在获取详细资料，请稍等！</string>
    <string name="friend_detail_getError">获取详细资料失败</string>
    <string name="friend_save_success">保存成功</string>
    <string name="friend_save_failed">保存失败</string>
    <string name="friend_recommendReason">TA和我有<Data><![CDATA[<font color="#F23A1C">%1$s</font>]]></Data>个共同好友</string>
    <string name="friend_detailReason">%1$s有我联系人中<Data><![CDATA[<font color="#F23A1C">%2$s</font>]]></Data>等<Data><![CDATA[<font color="#F23A1C">%3$s</font>]]></Data>人的联系方式</string>
    <string name="friend_detailReason_less">%1$s有我联系人中<Data><![CDATA[<font color="#F23A1C">%2$s</font>]]></Data>的联系方式</string>
    <string name="friend_detailReason_havePhones">        %1$s有我和我联系人中<Data><![CDATA[<font color="#F23A1C">%2$s</font>]]></Data>等<Data><![CDATA[<font color="#F23A1C">%3$s</font>]]></Data>人的联系方式</string>
    <string name="friend_detailReason_havePhones_less">        %1$s有我和我联系人中<Data><![CDATA[<font color="#F23A1C">%2$s</font>]]></Data>的联系方式</string>
    <string name="friend_recommendReason_flag">TA和我有</string>
    <string name="friend_detailReason_flag">我和我</string>
    <string name="friend_regex_flag">等(\\d+)个</string>
    <string name="friend_regex_split">、</string>
    <string name="friend_null_listview">暂时没有可能认识的人哦，\n\u0020\u0020邀请朋友一起来手信吧！</string>
    <string name="search_friend">精确查找</string>
    <string name="search_friend_hint">输入手机号/帐号搜朋友 </string>
    <string name="settings_name">帐号:</string>
    <string name="settings_male">男</string>
    <string name="settings_female">女</string>
    <string name="settings_sex">性别</string>
    <string name="settings_old_password_hint">旧密码</string>
    <string name="settings_new_password_hint">新密码6–12位字符</string>
    <string name="settings_confirm_password_hint">确认新密码</string>
    <string name="register_first_use">第一次使用手信？</string>
    <string name="register_login">登        录</string>
    <string name="register_user_protocol"><u>用户协议</u></string>
    <string name="register_send_message_tip">激活会发送一条短信用于绑定手机号</string>
    <string name="register_binding_reason">方便手机号直接登录以及找回密码</string>
    <string name="register_accept_protocol">激活即表示您同意接受</string>
    <string name="login_username_hint">请输入帐号/手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_find_password">忘记密码</string>
    <string name="new_version">新版本：</string>
    <string name="update">立即更新</string>
    <string name="app_check">检查更新</string>
    <string name="cur_version">当前版本：</string>
    <string name="customer_service_email">邮        箱：</string>
    <string name="customer_service_email_value"><a href="mailto:shouxin@sky-mobi.com">shouxin@sky-mobi.com</a></string>
    <string name="corporation">杭州梵艺科技有限公司  版权所有</string>
    <string name="set_nick_tip">昵称建议填写真实姓名：</string>
    <string name="set_nick_hint"> 您的昵称 2—12个字</string>
    <string name="set_nick_real_reason">真实姓名可以让更多朋友找到你！</string>
</resources>