<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            style="@style/register_first_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:text="@string/register_first_use" />

        <ImageButton
            android:id="@+id/register_free_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:background="@drawable/register_btn" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
            
  			<ToggleButton
                android:id="@+id/register_protocol_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:background="@drawable/register_protocol_checkbox_focus"
                android:button="@drawable/register_protocol_selector"
                android:checked="true"
                android:textOff=""
                android:textOn="" />
            
            <TextView
                android:id="@+id/register_accept_protocol"
                style="@style/register_send_message_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/register_accept_protocol" />

          
            <TextView
                android:id="@+id/register_protocol_textlink"
                style="@style/register_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/register_user_protocol" />
        </LinearLayout>

        <TextView
            style="@style/register_send_message_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="2dip"
            android:text="@string/register_send_message_tip" />
        <TextView
            style="@style/register_send_message_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="2dip"
            android:text="@string/register_binding_reason" />
    </LinearLayout>

</RelativeLayout>