<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >
    
    <!-- Top Title -->
    <include layout="@layout/topbar" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"         
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="15dip">

        <TextView
            android:id="@+id/text_account_title"
            style="@style/settings_bind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_name" />
        
        <TextView
            android:id="@+id/text_account"
            style="@style/settings_bind_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dip"/>
    </LinearLayout>

    <EditText
        android:id="@+id/settings_old_password"
        style="@style/change_password_editor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_bg"
        android:maxLength="12"
        android:hint="@string/settings_old_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/settings_new_password"
        style="@style/change_password_editor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="13dip"
        android:background="@drawable/edit_bg"
        android:maxLength="12"
        android:hint="@string/settings_new_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/settings_confirm_password"
        style="@style/change_password_editor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="13dip"
        android:background="@drawable/edit_bg"
        android:maxLength="12"
        android:hint="@string/settings_confirm_password_hint"
        android:inputType="textPassword" />
	
    <!-- 
    <Button
        android:id="@+id/settings_commit_btn"
        style="@style/settings_commit_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="18dip"
        android:text="@string/settings_commit"
        android:background="@drawable/green_btn_bg" />
    -->  
</LinearLayout>