<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical" >
        
    <include layout="@layout/topbar" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="12dip"
        android:paddingRight="12dip"
        android:paddingTop="40dip">

        <TextView
            android:id="@+id/set_nick_tip"
            style="@style/set_nick_tip"
            android:text="@string/set_nick_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <EditText
	        android:id="@+id/set_nick_editor"
	        style="@style/set_nick_editor"
	        android:background="@drawable/edit_bg"
	        android:singleLine="true"
	        android:maxLength="12"
	        android:hint="@string/set_nick_hint"
	        android:textColor="@color/message_list_item_nickname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        
	        android:layout_marginTop="10dip"
	        android:layout_marginBottom="10dip"	        
	        
	        android:paddingLeft="20dip"
	        android:paddingTop="10dip"
	        android:paddingRight="20dip"
	        android:paddingBottom="10dip"/>
      
        <TextView                
                android:id="@+id/set_nick_real_reason"
                style="@style/set_nick_real_reason"
                android:text="@string/set_nick_real_reason"
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:layout_marginBottom="20dip"/>            
     
        <LinearLayout
            android:id="@+id/set_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="0dip"
	        android:background="@drawable/set_sex_bg">

  			<LinearLayout
  			    android:id="@+id/set_sex_female"
  			    android:layout_weight="1"
  			    android:layout_width="fill_parent"
  			    android:layout_height="wrap_content"
  			    android:paddingTop="10dip"
  			    android:paddingBottom="10dip"
  			    android:layout_gravity="center_vertical">
			    
  			    <ImageView
  			        android:id="@+id/set_sex_img_female"  			        
  			        android:src="@drawable/set_sex_female"
  			        android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginLeft="50dip"
            		android:layout_marginRight="5dip"/>
  			        
  			    <TextView
  			        android:id="@+id/set_sex_text_female"
  			        android:text="@string/settings_female"
  			        style="@style/set_sex_text"
  			        android:layout_width="wrap_content"
  			        android:layout_height="fill_parent"
  			        android:layout_marginLeft="5dip"
  			        android:layout_marginRight="30dip"
  			        android:gravity="center_vertical"/>  			        
				
  			</LinearLayout>

  			<TextView
        		android:layout_width="1dip"
        		android:layout_height="fill_parent"
        		android:background="@color/message_list_separate" />

  			<LinearLayout
  			    android:id="@+id/set_sex_male"
  			    android:layout_weight="1"
  			    android:layout_width="fill_parent"
  			    android:layout_height="wrap_content"
  			    android:paddingTop="10dip"
  			    android:paddingBottom="10dip">
			    
  			    <ImageView
  			        android:id="@+id/set_sex_img_male"
  			        android:layout_width="wrap_content"
  			        android:layout_height="wrap_content"
  			        android:layout_marginLeft="30dip"
  			        android:src="@drawable/set_sex_male"
  			        android:layout_gravity="left"/>

  			    <TextView
  			        android:id="@+id/set_sex_text_male"
  			        android:text="@string/settings_male"
  			        style="@style/set_sex_text"
  			        android:layout_width="fill_parent"
  			        android:layout_height="fill_parent"
  			        android:layout_marginLeft="20dip"
  			        android:gravity="center_vertical"/>
  			        
  			</LinearLayout>
           
     	</LinearLayout>
         
    </LinearLayout>
    

</LinearLayout>